--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,4 +18,5 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
+      - run: npm build
       - run: npm run test
