--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "html-loader-jest": "^0.2.1",
     "jest": "^29.4.2",
     "jest-snapshot": "^29.5.0",
+    "js-beautify": "^1.14.7",
     "npm-run-all": "^4.1.5",
     "prettier": "2.8.4",
     "rimraf": "^4.1.2",
