--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
     "@types/node": "^18.13.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
+    "eslint": "^8.36.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
     "html-loader": "^4.2.0",
     "html-loader-jest": "^0.2.1",
     "jest": "^29.4.2",
+    "jest-snapshot": "^29.5.0",
+    "js-beautify": "^1.14.7",
     "npm-run-all": "^4.1.5",
     "prettier": "2.8.4",
     "rimraf": "^4.1.2",
